--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "flash-card-gui",
+  "name": "flash-cards-gui",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next build ",
     "start": "next start",
     "lint": "next lint",
     "lint:fix": "next lint --fix",
