--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "axios": "^1.10.0",
     "next": "15.3.5",
     "next-intl": "^4.3.4",
+    "prom-client": "^15.1.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.60.0",
