--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
+# API
+NEXT_PUBLIC_API_BASE_URL=http://localhost:8080
+
+# Loki
 LOKI_PUSH_URL=http://localhost:3100/loki/api/v1/push
 APP_NAME=frontend
 METRICS_PREFIX=frontend_
