--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,12 +4,16 @@ on:
   pull_request: { branches: [main, dev] }
   workflow_dispatch:
 
+permissions:
+  contents: read
+  packages: write 
+
 jobs:
   pipeline:
     uses: Path-Of-Execution-Team/FlashCards/.github/workflows/reusable-build-deploy.yml@main
     with:
       lang: node
-      image_name: ghcr.io/Path-Of-Execution-Team/flashcardsgui
+      image_name: ghcr.io/path-of-execution-team/flashcardsgui
       container_name: frontend
       deployment_dev: frontend
       deployment_prod: frontend
