--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 # API
-NEXT_PUBLIC_API_BASE_URL=http://localhost:8080
+NEXT_PUBLIC_API_URL=http://localhost:8080/api
 
 # Loki
 LOKI_PUSH_URL=http://localhost:3100/loki/api/v1/push
