--- a/.github/workflows/gui-ci.yml
+++ b/.github/workflows/gui-ci.yml
@@ -1,89 +1,91 @@
 name: GUI CI (tests + docker image)
 
 on:
-    push:
-        branches:
-            - main
-            - develop
-    pull_request:
-        branches:
-            - main
-            - develop
+  push:
+    branches:
+      - main
+      - develop
+  pull_request:
+    branches:
+      - main
+      - develop
 
 env:
-    REGISTRY: ghcr.io
-    IMAGE_NAME: ${{ github.repository_owner }}/flashcards-gui
+  REGISTRY: ghcr.io
 
 jobs:
-    test:
-        name: Run GUI tests
-        runs-on: ubuntu-latest
+  test:
+    name: Run GUI tests
+    runs-on: ubuntu-latest
 
-        steps:
-            - name: Checkout repo
-              uses: actions/checkout@v4
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
-            - name: Set up Node
-              uses: actions/setup-node@v4
-              with:
-                  node-version: "22"
-                  cache: "npm"
+      - name: Set up Node
+        uses: actions/setup-node@v4
+        with:
+          node-version: "22.17"
+          cache: "npm"
 
-            - name: Install dependencies
-              run: npm ci
+      - name: Install dependencies
+        run: npm ci
 
-            - name: Run tests
-              run: |
-                  npm run lint --if-present
-                  npm test --if-present
-                  npm run test --if-present
-                  npm run build
+      - name: Run tests & build
+        run: |
+          npm run lint --if-present
+          npm test --if-present
+          npm run test --if-present
+          npm run build
 
-    build_and_push:
-        name: Build & push Docker image
-        needs: test
-        runs-on: ubuntu-latest
+  build_and_push:
+    name: Build & push Docker image
+    needs: test
+    runs-on: ubuntu-latest
 
-        if: github.event_name == 'push'
+    permissions:
+      contents: read
+      packages: write
+      id-token: write
 
-        permissions:
-            contents: read
-            packages: write
-            id-token: write
+    steps:
+      - name: Checkout repo
+        uses: actions/checkout@v4
 
-        steps:
-            - name: Checkout repo
-              uses: actions/checkout@v4
+      - name: Log in to GHCR
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-            - name: Log in to GHCR
-              uses: docker/login-action@v3
-              with:
-                  registry: ghcr.io
-                  username: ${{ github.actor }}
-                  password: ${{ secrets.GITHUB_TOKEN }}
+      - name: Set image vars
+        id: vars
+        run: |
+          OWNER="${GITHUB_REPOSITORY_OWNER,,}"
+          BRANCH="${GITHUB_REF_NAME}"
+          SHA="${GITHUB_SHA::7}"
 
-            - name: Set image tags based on branch
-              id: vars
-              run: |
-                  BRANCH="${GITHUB_REF_NAME}"
-                  SHA="${GITHUB_SHA::7}"
+          if [ "$BRANCH" = "main" ]; then
+            IMAGE_NAME="${OWNER}/flashcards-gui"
+            TAG="${BRANCH}-${SHA}"
+            LATEST="prod-latest"
+          else
+            IMAGE_NAME="${OWNER}/flashcards-gui-dev"
+            TAG="${BRANCH}-${SHA}"
+            LATEST="dev-latest"
+          fi
 
-                  if [ "$BRANCH" = "main" ]; then
-                    echo "env=prod" >> $GITHUB_OUTPUT
-                    echo "tag=${BRANCH}-${SHA}" >> $GITHUB_OUTPUT
-                    echo "latest=prod-latest" >> $GITHUB_OUTPUT
-                  else
-                    echo "env=dev" >> $GITHUB_OUTPUT
-                    echo "tag=${BRANCH}-${SHA}" >> $GITHUB_OUTPUT
-                    echo "latest=dev-latest" >> $GITHUB_OUTPUT
-                  fi
+          echo "image_name=${IMAGE_NAME}" >> $GITHUB_OUTPUT
+          echo "tag=${TAG}" >> $GITHUB_OUTPUT
+          echo "latest=${LATEST}" >> $GITHUB_OUTPUT
 
-            - name: Build & push Docker image
-              uses: docker/build-push-action@v5
-              with:
-                  context: .
-                  file: ./Dockerfile
-                  push: true
-                  tags: |
-                      ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.vars.outputs.tag }}
-                      ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.vars.outputs.latest }}
+      - name: Build & push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: |
+            ${{ env.REGISTRY }}/${{ steps.vars.outputs.image_name }}:${{ steps.vars.outputs.tag }}
+            ${{ env.REGISTRY }}/${{ steps.vars.outputs.image_name }}:${{ steps.vars.outputs.latest }}
