--- a/.github/workflows/gui-ci.yml
+++ b/.github/workflows/gui-ci.yml
@@ -1,4 +1,4 @@
-name: GUI CI (tests + docker image)
+name: GUI CI (tests + docker image + deploy)
 
 on:
   push:
@@ -89,3 +89,48 @@ jobs:
           tags: |
             ${{ env.REGISTRY }}/${{ steps.vars.outputs.image_name }}:${{ steps.vars.outputs.tag }}
             ${{ env.REGISTRY }}/${{ steps.vars.outputs.image_name }}:${{ steps.vars.outputs.latest }}
+
+  deploy:
+    name: Deploy to Kubernetes
+    needs: build_and_push
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push'
+
+    steps:
+      - name: Set deploy vars
+        id: vars
+        run: |
+          OWNER="${GITHUB_REPOSITORY_OWNER,,}"
+          BRANCH="${GITHUB_REF_NAME}"
+
+          if [ "$BRANCH" = "main" ]; then
+            IMAGE_NAME="${OWNER}/flashcards-gui"
+            LATEST="prod-latest"
+            NAMESPACE="flashcards"
+          else
+            IMAGE_NAME="${OWNER}/flashcards-gui-dev"
+            LATEST="dev-latest"
+            NAMESPACE="flashcards-dev"
+          fi
+
+          echo "image_name=${IMAGE_NAME}" >> $GITHUB_OUTPUT
+          echo "latest=${LATEST}" >> $GITHUB_OUTPUT
+          echo "namespace=${NAMESPACE}" >> $GITHUB_OUTPUT
+
+      - name: Deploy via SSH to Kubernetes
+        uses: appleboy/ssh-action@v1.2.0
+        with:
+          host: ${{ secrets.SSH_HOST }}
+          username: ${{ secrets.SSH_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          port: ${{ secrets.SSH_PORT || 22 }}
+          script: |
+            set -e
+            IMAGE="ghcr.io/${{ steps.vars.outputs.image_name }}:${{ steps.vars.outputs.latest }}"
+            NAMESPACE="${{ steps.vars.outputs.namespace }}"
+
+            echo "Deploying FRONTEND to namespace: $NAMESPACE"
+            echo "Using image: $IMAGE"
+
+            kubectl -n "$NAMESPACE" set image deployment/frontend frontend="$IMAGE"
+            kubectl -n "$NAMESPACE" rollout status deployment/frontend
