Refactor GUI CI workflow: streamline variable assignments and remove redundant steps

--- a/.github/workflows/gui-ci.yml
+++ b/.github/workflows/gui-ci.yml
@@ -35,7 +35,6 @@ jobs:
         run: |
           npm run lint --if-present
           npm test --if-present
-          npm run test --if-present
           npm run build
 
   build_and_push:
@@ -46,7 +45,6 @@ jobs:
     permissions:
       contents: read
       packages: write
-      id-token: write
 
     steps:
       - name: Checkout repo
@@ -62,23 +60,23 @@ jobs:
       - name: Set image vars
         id: vars
         run: |
-          OWNER="${GITHUB_REPOSITORY_OWNER,,}"
-          BRANCH="${GITHUB_REF_NAME}"
-          SHA="${GITHUB_SHA::7}"
+          OWNER=${GITHUB_REPOSITORY_OWNER,,}
+          BRANCH=${GITHUB_REF_NAME}
+          SHA=${GITHUB_SHA::7}
 
           if [ "$BRANCH" = "main" ]; then
-            IMAGE_NAME="${OWNER}/flashcards-gui"
-            NAMESPACE="flashcards"
+            IMAGE_NAME=${OWNER}/flashcards-gui
+            NAMESPACE=flashcards
           else
-            IMAGE_NAME="${OWNER}/flashcards-gui-dev"
-            NAMESPACE="flashcards-dev"
+            IMAGE_NAME=${OWNER}/flashcards-gui-dev
+            NAMESPACE=flashcards-dev
           fi
 
-          TAG="sha-${SHA}"
+          TAG=sha-${SHA}
 
-          echo "image_name=${IMAGE_NAME}" >> $GITHUB_OUTPUT
-          echo "tag=${TAG}" >> $GITHUB_OUTPUT
-          echo "namespace=${NAMESPACE}" >> $GITHUB_OUTPUT
+          echo image_name=${IMAGE_NAME} >> $GITHUB_OUTPUT
+          echo tag=${TAG} >> $GITHUB_OUTPUT
+          echo namespace=${NAMESPACE} >> $GITHUB_OUTPUT
 
       - name: Build & push Docker image
         uses: docker/build-push-action@v5
@@ -88,35 +86,15 @@ jobs:
           push: true
           tags: |
             ${{ env.REGISTRY }}/${{ steps.vars.outputs.image_name }}:${{ steps.vars.outputs.tag }}
-            ${{ env.REGISTRY }}/${{ steps.vars.outputs.image_name }}:${{ steps.vars.outputs.latest }}
 
   deploy:
     name: Deploy to Kubernetes
     needs: build_and_push
     runs-on: ubuntu-latest
+
     if: github.event_name == 'push'
 
     steps:
-      - name: Set deploy vars
-        id: vars
-        run: |
-          OWNER="${GITHUB_REPOSITORY_OWNER,,}"
-          BRANCH="${GITHUB_REF_NAME}"
-
-          if [ "$BRANCH" = "main" ]; then
-            IMAGE_NAME="${OWNER}/flashcards-gui"
-            LATEST="prod-latest"
-            NAMESPACE="flashcards"
-          else
-            IMAGE_NAME="${OWNER}/flashcards-gui-dev"
-            LATEST="dev-latest"
-            NAMESPACE="flashcards-dev"
-          fi
-
-          echo "image_name=${IMAGE_NAME}" >> $GITHUB_OUTPUT
-          echo "latest=${LATEST}" >> $GITHUB_OUTPUT
-          echo "namespace=${NAMESPACE}" >> $GITHUB_OUTPUT
-
       - name: Deploy via SSH to Kubernetes
         uses: appleboy/ssh-action@v1.2.0
         with:
@@ -125,13 +103,14 @@ jobs:
           key: ${{ secrets.SSH_PRIVATE_KEY }}
           port: ${{ secrets.SSH_PORT || 22 }}
           script: |
-            export KUBECONFIG=/home/ubuntu/.kube/config
             set -e
-            IMAGE="ghcr.io/${{ steps.vars.outputs.image_name }}:${{ steps.vars.outputs.latest }}"
-            NAMESPACE="${{ steps.vars.outputs.namespace }}"
+            export KUBECONFIG=/home/ubuntu/.kube/config
 
-            echo "Deploying FRONTEND to namespace: $NAMESPACE"
-            echo "Using image: $IMAGE"
+            IMAGE=ghcr.io/${{ steps.build_and_push.outputs.image_name }}:${{ steps.build_and_push.outputs.tag }}
+            NAMESPACE=${{ steps.build_and_push.outputs.namespace }}
 
-            kubectl -n "$NAMESPACE" set image deployment/frontend frontend="$IMAGE"
-            kubectl -n "$NAMESPACE" rollout status deployment/frontend
+            echo Deploying FRONTEND to namespace: $NAMESPACE
+            echo Using image: $IMAGE
+
+            kubectl -n $NAMESPACE set image deployment/frontend frontend=$IMAGE
+            kubectl -n $NAMESPACE rollout status deployment/frontend
